--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -28,9 +30,10 @@
         </activity>
         <provider
             android:name=".TaskProvider"
-            android:authorities="com.example.taskprovider"
-            android:exported="false"
-            android:grantUriPermissions="true" />
+            android:authorities="com.example.task-provider"
+            android:exported="true" />
+
+
     </application>
 
 </manifest>
